# MapReduceFramework

./: .gitattributes  CMakeLists.txt  LICENSE  Makefile  README.md
example/: SampleClient.cpp
include/: Barrier.h  JobStateManager.h  MapReduceClient.h  MapReduceFramework.h
src/: Barrier.cpp  JobStateManager.cpp  MapReduceFramework.cpp
